# cortext

./: .gitignore  DESIGN.md  README.md  pyproject.toml
src/cortex/: __init__.py  __main__.py  cli.py  init_project.py  models.py  validate.py
src/cortex/templates/: __init__.py  agent-rules.md  claude-instructions.md  copilot-instructions.md  drift-config.yaml  review-config.yaml  skill-context-owner.md  skill-index.md  skill-reviewer.md
tests/: conftest.py  test_commands.py  test_init.py  test_models.py  test_validate.py
