[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-decisions"
version = "0.1.0"
description = "Context-aware decision tracking system. Track architectural decisions as a DAG with file-based YAML storage."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cortex = "cortex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cortex.templates" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
